[package]
name = "zteleop"
version = "0.1.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.7.4"
#zenoh = "0.5.0-beta.3"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-trait = "0.1.36"

serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0.55"
bincode = "1.3.1"
log = "0.4"
env_logger = "0.7.1"
futures = "0.3.5"

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable", "attributes"]


[[bin]]
name = "teleop"
test = false
bench = false

[[bin]]
name = "monitor"
test = false
bench = false